	* media: Allow getting/setting video capabilities. (Jakub Adam) (half of
	  #13095)
	* Simple Silence Suppression is optional per-account. (Jakub Adam) (half
	  of #13180)
	* Fix purple-url-handler being unable to find an account.

	Gadu-Gadu:
	* Allow showing your status only to buddies. (Mateusz Piękos) (#13358)

	ICQ:
	* Fix unsetting your mood when "None" is selected. (#7431)

	Windows-Specific Changes:
	* Fix building libpurple with Visual C++ .NET 2005. This was accidentally
	  broken in 2.7.11. (Florian Quèze)

version 2.7.11 (03/10/2011):
	General:
	* Our bundled libgadu should now build on HP-UX.
	* Fix some instances of file transfers never completing. (Cristi Posoiu)
	  (#12472)

	Pidgin:
	* Sort by Status no longer causes buddies to move around when you
	  click them.
	* Fix embedding in the system tray on older GTK+ releases (such as on
	  CentOS 5.5 and older Fedora).
	* No longer require libstartup-notification for startup notification
	  support.  GTK+ has included support for years, so use it instead. (David
	  Benjamin) (#13245)

	AIM:
	* Fix a bug where some buddies from your buddy list might not show up.
	  Affected non-English ICQ users the most. (#13386)
	* Send keepalives for all types of network connections.  Will hopefully
	  make chat rooms more reliable. (#1449)

	MSN:
	* Fix bug that prevented added buddies to your buddy list in certain
	  circumstances.  (#13298)

	MXit:
	* MXit plugin and reported client version now follow the libpurple
	  version.
	* Don't try to request profile information for non-user contacts.
	* Allow Re-Invite for contacts in Deleted or Rejected state.
	* Ensure we don't send packets too fast to the MXit server and trigger
	  its flood-detection mechanism.  Also increased the internal packet queue
	  to 32 packets.

	XMPP:
	* Fix building on platforms with an older glib (inadvertantly broken in
	  2.7.10).  (#13329)
	* Don't treat the on-join status storms as 'new arrivals'.  (Thijs
	  Alkemade) (#a14527)